aks/workload/aspnetapp.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root #  for license information.
#  ------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp-deployment
  namespace: a0008
  labels:
    app: aspnetapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 10001
        runAsGroup: 3000
      containers:
      - name: aspnetcore-webapp-sample
        image: mcr.microsoft.com/dotnet/core/samples:aspnetapp
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - all
      nodeSelector:
       agentpool: npuser01
---
kind: Service
apiVersion: v1
metadata:
  name: aspnetapp-service
  namespace: a0008
spec:
  selector:
    app: aspnetapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aspnetapp-ingress
  namespace: a0008
  annotations:
    # defines controller implementing this ingress resource: https://docs.microsoft.com/en-us/azure/dev-spaces/how-to/ingress-https-traefik
    # ingress.class annotation is being deprecated in Kubernetes 1.18: https://kubernetes.io/docs/concepts/services-networking/ingress/#deprecated-annotation
    # For backwards compatibility, when this annotation is set, precedence is given over the new field ingressClassName under spec.
    kubernetes.io/ingress.class: traefik
spec:
  # ingressClassName: "traefik"
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: aspnetapp-service
          servicePort: http
---
